<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string
        name="app_name">Hide Bar (demo)</string>

    <string
        name="description_label">Description</string>
    <string
        name="description_summary">
        Hide Bar is an android service that can hide or show the systembar.
    </string>
    <string
        name="settings_label">Settings</string>

    <string
        name="enable_notification">Enable in notification area</string>
    <string
        name="enable_notification_summary">
        This will put a menu in the notification area,
        from where the systembar can be hidden.
    </string>

    <string
        name="hideatboot_label">Hide the systembar at boot</string>
    <string
        name="hideatboot_summary">This will automatically hide the systembar at boot.
    </string>

    <string
        name="showbar_method_label">
        Method to show the systembar...
    </string>

    <string
        name="showbar_method_summary">
        Choose the method for showing the systembar when it is hidden.
    </string>

    <string
        name="showbar_method_none_warning">
        Once you hide the systembar it will not be possible to show the systembar again,
        unless you disable the service in this preference screen. So be very careful with
        this option. It should only be used when you really want your tablet in kiosk
        mode.
    </string>
    
    <string
        name="ghostback_label">
        Ghost back button
    </string>
    <string
        name="ghostback_summary">
        There will be an invisible back button at the lower-left corner of the screen.
    </string>

    <string
        name="extra_label">Extra</string>

    <string
        name="help_label">Help</string>
    <string
        name="help_summary">Use the icon with two downward arrows in the systembar to
        open a notification. Then click on that notification to hide the systembar. To
        show the systembar again, touch the bottom of the screen.
        \nThere is also a widgit available to hide or show the systembar.
    </string>

    <string
        name="about_label">About...</string>
    <string
        name="about_summary">Display information about Hide Bar.
	</string>
    <string
        name="about_text">
        <b>Description:</b>
        Hide Bar can be used to toggle the android systembar on and off.\n\n
        <b>Programming:</b>
        Pieter Pareit (pieter.pareit@gmail.com)\n\n
        <b>Artwork: </b>
        Birgit Niemegeers\n\n
        <b>Credits: </b>
        Manuel Di Cerbo (http://android.serverbox.ch/) research on hiding the systembar
        for specific devices.\n\n
        <b>License: </b>
        GNU General Public License v3.0\n\n
        <b>Home Page: </b>
        http://ppareit.github.com/HideBar/\n\n
        <b>Source Code: </b>
        https://github.com/ppareit/HideBar\n\n
    </string>

    <string
        name="hidebar_notification">Hide systembar</string>

    <string name="device_not_rooted_label">
        Device not rooted
    </string>
    <string name="device_not_rooted_text">
        It seems that this device is not rooted or busybox is not configured correctly.\n\n
        HideBar cannot work correctly on a non rooted device. To hide the
        systembar, this application has to use low level functionality of
        android. This can only be done on a rooted device.\n\n
        BusyBox is needed on some devices. If you get this message, install busybox
        and start busybox at least once. Installing busybox alone is not enough,
        it must be run also.\n\n
        If your device is rooted and HideBar does not work as expected,
        contact the developer (Pieter Pareit, pieter.pareit@gmail.com).
    </string>
    <string name="exit_button_text">
        Exit
    </string>
    <string name="ignore_button_text">
        Ignore
    </string>


    <string name="unable_to_call_low_level_label">
        Unable to call low level
    </string>
    <string name="unable_to_call_low_level_text">
        Your device is rooted. At the same time, I\'m unable to find some
        needed low level functionallity. That functionallity is provided by
        BusyBox. BusyBox can be installed from the market. Once BusyBox is
		installed, it should be run at least once to enable the low level
		functionallity.\n\n
		You can ignore this warning, but then HideBar will probably not work.
    </string>

    <string name="widget_label">HideBar Widget</string>
    <string name="bar_visible">Visible</string>
    <string name="bar_hidden">Hidden</string>

</resources>



