<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_label">
        <CheckBoxPreference
            android:key="shouldrun_preference"
            android:title="@string/running_label"
            android:summary="@string/running_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="runatboot_preference"
            android:title="@string/runatboot_label"
            android:summary="@string/runatboot_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="hideatboot_preference"
            android:title="@string/hideatboot_label"
            android:summary="@string/hideatboot_summary"
            android:defaultValue="false" />
        <ListPreference
            android:key="showbar_method_preference"
            android:title="@string/showbar_method_label"
            android:summary="@string/showbar_method_summary"
            android:dialogTitle="@string/showbar_method_label"
            android:entries="@array/showbar_method_entries"
            android:entryValues="@array/showbar_method_values"
            android:defaultValue="BOTTOM_TOUCH" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/extra_label">
        <Preference
            android:title="@string/help_label"
            android:summary="@string/help_summary" />
        <Preference
            android:title="@string/about_label"
            android:summary="@string/about_summary"
            android:key="about_preference" />
    </PreferenceCategory>
</PreferenceScreen>
